# RSDKv2-Decompilation-Android

./: ANDROID_PORT_SUMMARY.md  BUILD_CHECKLIST.md  DEPLOYMENT_SUMMARY.md  FILE_MANIFEST.md  QUICKSTART_ANDROID.md  README_ANDROID.md  create_app_icons.sh  setup_sdl2.sh  verify_setup.sh
RSDKv2/: Drawing.cpp  ModAPI.cpp  Player.hpp  Reader.cpp  RetroEngine.cpp  RetroEngine.hpp  Userdata.cpp  main.cpp
android/: .gitignore  README.md  local.properties.template  settings.gradle
android/app/: build.gradle  proguard-rules.pro
android/app/src/main/: AndroidManifest.xml
android/app/src/main/cpp/: CMakeLists.txt
android/app/src/main/cpp/libogg-1.3.5/include/ogg/: config_types.h
android/app/src/main/java/com/rsdkmodding/rsdkv2/: RSDKv2Activity.java
android/app/src/main/res/mipmap-anydpi-v26/: ic_launcher.xml
android/app/src/main/res/values/: strings.xml
